# parallelsort

./: .gitignore  CMakeLists.txt  makereq.sh  plot.py  readme.md  result.csv
src/: main.cpp
